@@ -517,6 +517,13 @@ static bool c_ast_check_builtin( c_ast_t const *ast, unsigned flags ) {
       print_error( &ast->loc, "scoped names can not have bit-field widths\n" );
       return false;
     }
+    if ( c_tid_is_any( ast->type.atids, TA_NO_UNIQUE_ADDRESS ) ) {
+      print_error( &ast->loc,
+        "[[no_unique_address]] %ss can not have bit-field widths\n",
+        c_kind_name( ast->kind )
+      );
+      return false;
+    }
     if ( ast->type.stids != TS_NONE ) {
       print_error( &ast->loc,
         "%s can not have bit-field widths\n",
