@@ -345,6 +345,7 @@ TESTS+=	tests/explain_+ctor-error.test \
 	tests/explain_2i-redef-c++.test \
 	tests/explain_a_cd_i.test \
 	tests/explain_a_nua_f.test \
+	tests/explain_a_nua_iw4.test \
 	tests/explain_af-c++11.test \
 	tests/explain_ai-c++11.test \
 	tests/explain_ari.test \
